# minoru-fediverse-crawler

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  ansible.cfg  header.html  index.css  index.md  instance_states.odg  plot_checks_histogram.py
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  fmt.yml
ansible/: deploy.yml  hosts.ini  minoru-fediverse-crawler.service
docker/: buildhost.dockerfile
docs/internal/llm_sessions/: 2026.03.11-session-ses_321c.md  2026.03.13-session-ses_31a0.md  2026.03.13-session-ses_31a1.md  2026.03.14-session-ses_318a.md  2026.03.24-session-ses_2e0a.md  2026.03.24-session-ses_2e10.md  2026.03.24-session-ses_2e11.md  2026.03.24-session-ses_2e12.md  2026.03.24-session-ses_2e13.md  2026.03.24-session-ses_2e14.md  2026.03.25-session-ses_2db1.md  2026.03.26-session-ses_2d51.md  2026.03.26-session-ses_2d52.md  2026.03.26-session-ses_2d53.md  2026.03.26-session-ses_2d54.md  2026.03.26-session-ses_2d55.md  2026.03.26-session-ses_2d68.md  2026.03.27-session-ses_2cff.md  2026.03.27-session-ses_2d01.md  2026.03.27-session-ses_2d03.md  2026.03.27-session-ses_2dff.md  2026.03.28-session-ses_22b1.md  2026.04.05-session-ses_2a1a.md  2026.04.05-session-ses_2a2d.md  2026.04.05-session-ses_2a2f.md  2026.04.06-session-ses_29c6.md  2026.04.06-session-ses_29cb.md  2026.04.06-session-ses_29cc.md  2026.04.06-session-ses_29cd.md  2026.04.06-session-ses_29ce.md  2026.04.20-session-ses_2544.md  2026.04.20-session-ses_2545.md  2026.04.21-session-ses_24f3.md  2026.04.25-session-ses_23b9.md  2026.04.25-session-ses_23bb.md  2026.04.25-session-ses_23bd.md  2026.04.26-session-ses_2369.md  2026.04.27-session-ses_2304.md  2026.04.27-session-ses_2305.md  2026.04.27-session-ses_2306.md  (+7 more)
scripts/: fetch_diasporg  fetch_fedidb  fetch_fediverse_observer  fetch_lemmy  fetch_misskey  fetch_peertube  fetch_the-federation
src/: db.rs  domain.rs  instance_adder.rs  ipc.rs  logging_helpers.rs  main.rs  time.rs
src/checker/: http_client.rs  http_fetcher.rs  mod.rs
src/orchestrator/: checker_handle.rs  db.rs  instance_checker.rs  list_generator.rs  mod.rs  time.rs
