[package]
name = "minoru-fediverse-crawler"
version = "1.0.0"
edition = "2021"
license = " AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
fastrand = "1"
json = "0.12"
lexopt = "0.2"
ureq = { version = "2", features = [ "gzip", "brotli", "json" ] }
rusqlite = "0.26"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
slog = "2"
slog-journald = "2"
url = { version = "2", features = [ "serde" ] }
libsqlite3-sys = "0.23"
rusty_pool = "0.7"
signal-hook = "0.3"
robotstxt = "0.3"
tempfile = "3"
addr = "0.15"
flate2 = "1"
