[package]
name = "minoru-fediverse-crawler"
version = "1.0.0"
edition = "2021"
license = " AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", default-features = false, features = [ "std" ] }
chrono = { version = "0.4", default-features = false, features = [ "alloc", "std", "clock" ] }
fastrand = { version = "2", default-features = false }
lexopt = { version = "0.3", default-features = false }
ureq = { version = "2", default-features = false, features = [ "tls", "gzip", "brotli", "json" ] }
rusqlite = { version = "0.28", default-features = false }
serde = { version = "1", default-features = false, features = [ "derive" ] }
serde_json = { version = "1", default-features = false }
slog = { version = "2", default-features = false }
slog-journald = { version = "2", default-features = false }
url = { version = "2", default-features = false, features = [ "serde" ] }
libsqlite3-sys = { version = "0.25.2", default-features = false }
rusty_pool = { version = "0.7", default-features = false, features = [ "async" ] }
signal-hook = { version = "0.3", default-features = false }
robotstxt = { version = "0.3", default-features = false }
tempfile = { version = "3", default-features = false }
addr = { version = "0.15", default-features = false, features = [ "psl" ] }
flate2 = { version = "1", default-features = false }

[profile.release]
lto = "fat"
